--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="characters.html">CHARACTERS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="log.html">QUEST LOG</a></li></ul></div>
+                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="characters.html">CHARACTERS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="log.html">QUEST LOG</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="map.html">MAP</a></li></ul></div>
                         
                     </nav>
                 </div>
@@ -50,7 +50,7 @@
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">MAP</a> </div>
             </div>
         </div>
     </div>
