--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-15">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-8">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -35,11 +35,11 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website creator</a></section><section class="mbr-section mbr-after-navbar" id="header3-10">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobile friendly website template</a></section><section class="mbr-section mbr-after-navbar" id="header3-9">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Characters</h3>
+                <h3 class="mbr-header__text">Map</h3>
                 
             </div>
         </div>
