--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mac website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-3">
+<section class="engine"><a rel="external" href="https://mobirise.com">best website creator</a></section><section class="mbr-section mbr-after-navbar" id="header3-3">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -50,7 +50,7 @@
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">MAP</a> </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="map.html">MAP</a> </div>
             </div>
         </div>
     </div>
