--- a/coc_characters.html
+++ b/coc_characters.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>RPG Log</title>
+  <title>RPG Log : Call of Cthulhu</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-8">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-15">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -35,11 +35,11 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website maker</a></section><section class="mbr-section mbr-after-navbar" id="header3-9">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-10">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Map</h3>
+                <h3 class="mbr-header__text">Characters</h3>
                 
             </div>
         </div>
