--- a/coc_index.html
+++ b/coc_index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>RPG Log</title>
+  <title>RPG Log : Call of Cthulhu</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
@@ -18,22 +18,32 @@
   
 </head>
 <body>
-<section class="mbr-section" id="header3-3">
+<section class="mbr-section" id="header3-10">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">RPG log</h3>
+                <h3 class="mbr-header__text">Call of Cthulhu</h3>
                 
             </div>
         </div>
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">what is the best website builder</a></section><section class="mbr-section" id="buttons1-8">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web design</a></section><section class="mbr-section" id="buttons1-11">
+    <div class="mbr-section__container container mbr-section__container--middle">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">&nbsp; QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;HOME</a> </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section" id="buttons1-13">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="map.html">MAP</a> </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/mobirise-free-win.zip"></a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/mobirise-free-mac.zip"></a></div>
             </div>
         </div>
     </div>
