--- a/coc_log.html
+++ b/coc_log.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>RPG Log</title>
+  <title>RPG Log : Call of Cthulhu</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
@@ -35,12 +35,23 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy website builder software</a></section><section class="mbr-section mbr-after-navbar" id="header3-10">
-    <div class="mbr-section__container container mbr-section__container--isolated">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop site builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
+    <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Characters</h3>
+                <h3 class="mbr-header__text">Quest Log</h3>
                 
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section" id="header3-14">
+    <div class="mbr-section__container container mbr-section__container--last">
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3 class="mbr-header__text"></h3>
+                <p class="mbr-header__subtext">By John Smith posted July 30, 2015</p>
             </div>
         </div>
     </div>
