--- a/coc_map.html
+++ b/coc_map.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>RPG Log</title>
+  <title>RPG Log : Call of Cthulhu</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-15">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="ext_menu-8">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -35,23 +35,12 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website creator</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
-    <div class="mbr-section__container container mbr-section__container--first">
+<section class="engine"><a rel="external" href="https://mobirise.com">best web development software</a></section><section class="mbr-section mbr-after-navbar" id="header3-9">
+    <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Quest Log</h3>
+                <h3 class="mbr-header__text">Map</h3>
                 
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section" id="header3-14">
-    <div class="mbr-section__container container mbr-section__container--last">
-        <div class="mbr-header mbr-header--wysiwyg row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text"></h3>
-                <p class="mbr-header__subtext">By John Smith posted July 30, 2015</p>
             </div>
         </div>
     </div>
