--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">what is the best website builder</a></section><section class="mbr-section" id="buttons1-8">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobile website maker</a></section><section class="mbr-section" id="buttons1-8">
+    <div class="mbr-section__container container mbr-section__container--middle">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_index.html">CALL OF CTHULHU</a>   </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section" id="buttons1-12">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="map.html">MAP</a> </div>
+                <div class="mbr-buttons mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_index.html">&nbsp; DUNGEON WORLD</a></div>
             </div>
         </div>
     </div>
