--- a/coc_index.html
+++ b/coc_index.html
@@ -29,11 +29,11 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web design</a></section><section class="mbr-section" id="buttons1-11">
+<section class="engine"><a rel="external" href="https://mobirise.com">best free web design software</a></section><section class="mbr-section" id="buttons1-11">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="log.html">&nbsp; QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;HOME</a> </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">HOME</a>   </div>
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/mobirise-free-win.zip"></a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/mobirise-free-mac.zip"></a></div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc/rules.pdf">RULEBOOK</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc/sheet.pdf">CHARACTER&nbsp;SHEETS</a></div>
             </div>
         </div>
     </div>
