--- a/coc_log.html
+++ b/coc_log.html
@@ -26,7 +26,7 @@
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="coc_characters.html">CHARACTERS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="coc_log.html">QUEST LOG</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="coc_map.html">MAP</a></li></ul></div>
+                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li>  </ul></div>
                         
                     </nav>
                 </div>
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
+<section class="engine"><a rel="external" href="https://mobirise.com">website layout maker</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
