--- a/coc_index.html
+++ b/coc_index.html
@@ -29,7 +29,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">web page creator software</a></section><section class="mbr-section" id="buttons1-11">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy website creator</a></section><section class="mbr-section" id="buttons1-11">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
