--- a/coc_index.html
+++ b/coc_index.html
@@ -29,11 +29,11 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy website creator</a></section><section class="mbr-section" id="buttons1-11">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile site builder</a></section><section class="mbr-section" id="buttons1-11">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_map.html">MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">HOME</a>   </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="coc_log.html">QUEST LOG</a>  <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">HOME</a>   </div>
             </div>
         </div>
     </div>
