--- a/dw_characters.html
+++ b/dw_characters.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">web creation software</a></section><section class="mbr-section mbr-after-navbar" id="header3-14">
+<section class="engine"><a rel="external" href="https://mobirise.com">web page design software</a></section><section class="mbr-section mbr-after-navbar" id="header3-14">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
