--- a/coc_log.html
+++ b/coc_log.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free website maker software</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop site builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
