--- a/dw_index.html
+++ b/dw_index.html
@@ -29,11 +29,11 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mac website creator</a></section><section class="mbr-section" id="buttons1-23">
+<section class="engine"><a rel="external" href="https://mobirise.com">website builder</a></section><section class="mbr-section" id="buttons1-23">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="dw_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="dw_log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">HOME</a>   </div>
+                <div class="mbr-buttons mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-default" href="dw_characters.html">CHARACTERS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="dw_log.html">QUEST LOG</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="http://benzer95.github.io/dw/map.png">MAP</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="index.html">HOME</a>   </div>
             </div>
         </div>
     </div>
