--- a/dw_log.html
+++ b/dw_log.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-18">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-18">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
