--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website software for mac</a></section><section class="mbr-section" id="buttons1-8">
+<section class="engine"><a rel="external" href="https://mobirise.com">software to create website</a></section><section class="mbr-section" id="buttons1-8">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
