--- a/coc_characters.html
+++ b/coc_characters.html
@@ -35,12 +35,23 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">one page website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-10">
-    <div class="mbr-section__container container mbr-section__container--isolated">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobile website maker</a></section><section class="mbr-section mbr-after-navbar" id="header3-10">
+    <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h3 class="mbr-header__text">Characters</h3>
                 
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section" id="header3-25">
+    <div class="mbr-section__container container mbr-section__container--last">
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3 class="mbr-header__text">DROP-DEAD EASY WEBSITE MAKER</h3>
+                <p class="mbr-header__subtext">By John Smith posted July 30, 2015</p>
             </div>
         </div>
     </div>
