--- a/coc_log.html
+++ b/coc_log.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website maker free</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
+<section class="engine"><a rel="external" href="https://mobirise.com">easiest website builder</a></section><section class="mbr-section mbr-after-navbar" id="header3-12">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -46,12 +46,12 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-14">
+<section class="mbr-section" id="header3-24">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Title</h3>
-                <p class="mbr-header__subtext">Lormem ipsum</p>
+                <h3 class="mbr-header__text">DROP-DEAD EASY WEBSITE MAKER</h3>
+                <p class="mbr-header__subtext">By John Smith posted July 30, 2015</p>
             </div>
         </div>
     </div>
