--- a/dw_index.html
+++ b/dw_index.html
@@ -22,7 +22,6 @@
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h3 class="mbr-header__text">Dungeon World</h3>
-                
             </div>
         </div>
     </div>
@@ -47,7 +46,18 @@
         </div>
     </div>
 </section>
-
+<section class="mbr-section" id="header3-22">
+    <div class="mbr-section__container container mbr-section__container--first">
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <p class="mbr-header__subtext">The pages of the rule book you should read are 17-21, 32 and 33. That's it. After that, the other pages in chapter 2 are handy to know too. </p>
+				<p class="mbr-header__subtext">If you want to play a magic using character, page 29 describes magic. Page 57 onwards describes the moves, if you want some idea of what the rules are talking about. Character creation is from page 49.</p>
+				<p class="mbr-header__subtext">An example of play is from page 44 to 47.</p>
+            </div>
+        </div>
+    </div>
+</section>
+				
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
