--- a/coc_log.html
+++ b/coc_log.html
@@ -49,8 +49,8 @@
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">DROP-DEAD EASY WEBSITE MAKER</h3>
-                <p class="mbr-header__subtext">By John Smith posted July 30, 2015</p>
+                <h3 class="mbr-header__text">Title</h3>
+                <p class="mbr-header__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In metus ex, porttitor quis nisl ac, finibus tempor libero. Sed id eros eros. Proin ac arcu mi. Sed eu efficitur justo, pellentesque ultrices ex. Maecenas iaculis massa accumsan, semper augue ut, faucibus ligula. Sed sed mauris quis massa sollicitudin gravida. Donec eros velit, elementum sit amet malesuada convallis, cursus vitae urna. Maecenas vel mauris nec augue sagittis elementum vel ut sapien. Ut blandit massa vel pulvinar mattis. Aenean consectetur enim eu magna sodales dignissim. Sed a lobortis tortor, nec sagittis enim. Nunc interdum est eget ante euismod egestas.</p>
             </div>
         </div>
     </div>
