--- a/dw_characters.html
+++ b/dw_characters.html
@@ -45,22 +45,22 @@
                 <h3 class="mbr-header__text">Characters</h3>
                 <h6 class="mbr-header__text">Baldric</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human
+                  Race: Human\n
                   Alignment: Chaotic
                 </p>
                 <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human
+                  Race: Human\n
                   Alignment: Neutral
                 </p>
                 <h6 class="mbr-header__text">Amenadiel</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human
+                  Race: Human\n
                   Alignment: Neutral
                 </p>
                 <h6 class="mbr-header__text">Kronk</h6>
                 <p class="mbr-header__subtext">
-                  Race: Halfling
+                  Race: Halfling\n
                   Alignment: Neutral
                 </p>
             </div>
